# barcode_scanner_v1

./: Makefile.am  Makefile.in  configure  configure.ac
autom4te.cache/: output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
glade_ui_prototypes/: #barcode_scanner_ui.glade#  barcode_scanner_ui.glade  barcode_scanner_ui.glade~
src/: app.cpp  application.cpp  application.hpp  barcode_record.cpp  barcode_record.hpp  main_window.cpp  main_window.hpp  scan_config_export_type.hpp  scan_config_record.cpp  scan_config_record.hpp  scan_config_window.cpp  scan_config_window.hpp
